Major refactor done.Disconnection bug done.